--- a/src/Sidebar/Sidebar.css
+++ b/src/Sidebar/Sidebar.css
@@ -7,6 +7,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  overflow-y: auto;
+  position: fixed;
+  height: 100%;
+  min-height: 100vh; 
   background: linear-gradient( #fafbfb, #f9e1fa);
   color: #020000; 
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
